[tool.poetry]
name = "proto_1"
version = "0.1.0"
description = "A bot for GenAI Hackathon"
authors = ["Rishiraj Bal,Razeen Hussain,Tanmay Sharma,Dhrubaditya Chakrabarty"]
readme = "README.md"
license = "Apache License 2.0"
packages = [
    { include = "proto_1" },
    { include = "deployment" }
]

[tool.poetry.dependencies]
python = ">=3.12"
requests = "^2.31.0"
pydantic = "^2.11.3"
python-dotenv = "^1.1.0"
google-cloud-aiplatform = {extras = ["adk", "agent_engines"], version = "^1.42.1"}
absl-py = "^2.1.0"
cloudpickle = "^3.0.0"

[tool.poetry.scripts]
deploy-remote = "deployment.remote:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


 
